fix anchor padding on mobile

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,13 @@
       padding-bottom: 100px;
     }
 
+     @media (max-width: 500px) {
+      html {
+        scroll-padding-top: 200px;
+        padding-bottom: 100px;
+    }
+    }
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
